--- a/ruka.html
+++ b/ruka.html
@@ -17,6 +17,7 @@
             <a href="#services">Услуги</a>
             <a href="#advantages">Почему мы</a>
             <a href="#contacts">Контакты</a>
+            <a href="admin.html">Админ</a>
         </nav>
     </div>
 </header>
@@ -411,6 +412,10 @@
                         <a href="#" title="WhatsApp">💬</a>
                         <a href="#" title="Telegram">✈️</a>
                     </div>
+                </div>
+                <div class="footer-section">
+                    <h3>Админ</h3>
+                    <p><a href="admin.html">Перейти в админку</a></p>
                 </div>
                 
             <div class="footer-bottom">
